# bti-bsp-ss19

./: README.md  a2_queue_size.sh
A1/2/: .gitignore  mockup.c  run_all.sh
A1/3/: .gitignore  makefile  makefileTemplate
A2.1/: CMakeLists.txt  makefile
A2.1/src/: definitions.h  main.c  main.h  queue.c  queue.h
A2.2/: .gitignore  .project  CMakeLists.txt  makefile
A2.2/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  structtask.html  taskqueue_8c.html  taskqueue_8h.html  taskqueue_8h_source.html
A2.2/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  defines_1.js  files_0.js  functions_2.js  functions_3.js  searchdata.js  variables_1.js
A2.2/src/: definitions.h  main.c  main.h  queue.c  taskqueue.c  taskqueue.h
A3/: Auswertung.odt  CMakeLists.txt  Doxyfile  all_results  all_results_lösung_nur_2806  output.txt  results diagram.ods  run_all
A3/html/: Problem__mmanage_8c_8txt.html  mmanage_8c.html  vmem_8h.html  vmem_8h_source.html
A3/src/: mmanage.c  vmaccess.c
A4/: Makefile  install.sh  translate.c  translate.h
